--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.fontSize": 12,
+    "liveSassCompile.settings.generateMap": false,
     "liveSassCompile.settings.formats":[
         // This is Default.
         {
@@ -7,5 +8,6 @@
             "extensionName": ".css",
             "savePath": "~/../css"
         }
-    ]
+    ],
+    "liveSassCompile.settings.autoprefix": []
 }
